kubernetes/gateway-api/agentgateway/llm/03-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
  namespace: default
spec:
  parentRefs:
    - name: agentgateway
      namespace: default
  rules:
    - backendRefs:
      - name: gemini
        namespace: default
        group: agentgateway.dev
        kind: AgentgatewayBackend
