kubernetes/gateway-api/agentgateway/llm/04-httproute-gemini.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
  namespace: default
spec:
  parentRefs:
    - name: agentgateway
      namespace: default
  rules:
    - matches:
      - path: 
          type: PathPrefix
          value: /ai/gemini
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: gemini
        namespace: default
        group: agentgateway.dev
        kind: AgentgatewayBackend
